<resources>
    <string name="app_name">SECO</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- drawer -->
    <string name="drawer_open">drawer_open</string>
    <string name="drawer_close">drawer_close</string>

    <!-- appbar scrolling view -->
    <string name="appbar_scrolling_view_behavior" translatable="false">
        com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior
    </string>

    <!-- free mode fragment -->
    <string name="title_activity_free_mode">콘텐츠 목록</string>
    <string name="tab_text_1">식단</string>
    <string name="tab_text_2">활동</string>
    <string name="tab_text_3">퀘스트</string>
    <string name="tab_text_4">관심</string>
    <string name="title_activity_free_mode_contents_details">FreeModeContentsDetailsActivity</string>

    <!-- Challenge mode fragment -->
    <string name="title_activity_challenge_mode">진행현황</string>

    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <!-- Routine Status -->
    <string name="title_activity_routine_status">진행현황</string>

    <!-- Authorize Activity -->
    <string name="title_activity_authorize">인증하기</string>

    <!-- recipe detail activity -->
    <string name="recipe_title">레시피</string>

    <!-- My SETI Activity -->
    <string name="myseti_activity_review_button"><u>내 답변 확인하기</u></string>

    <!-- My CMI Activity -->
    <string name="mycmi_activity_title">MY CMI</string>
    <string name="mycmi_activity_title_recent_graph">최근 6개월 간 나의 CMI 현황</string>
    <string name="mycmi_activity_rating_detail"><u>자세히 보기</u></string>
    <string name="mycmi_activity_title_suggested_activity">CMI 등급 개선을 위한 추천 활동</string>
    <string name="mycmi_activity_title_ranking">CMI 랭킹</string>
    <string name="mycmi_activity_title_ranking_share"><u>랭킹 공유하기</u>   </string>

    <!-- My Order History Activity -->
    <string name="myorder_history_title">주문내역</string>

    <!-- Liked Contents List Activity -->
    <string name="title_activity_liked_contents_list">담아놓은 컨텐츠 목록</string>
    <string name="title_activity_liked_contents_list_challenge_name">챌린지 이름</string>
    <string name="title_activity_liked_contents_list_challenge_date_from">부터</string>
    <string name="title_activity_liked_contents_list_challenge_until">까지</string>
    <string name="title_activity_liked_contents_list_challenge_select_days">요일 선택</string>
    <string name="title_activity_liked_contents_list_button_create_challenge">챌린지 생성하기</string>

    <!-- Walking Auth Activity -->
    <string name="distance_text">이동 거리</string>

    <!-- Stepping Auth Activity -->
    <string name="altitude_text">이동 층수</string>

    <!-- Google Map Permissions -->
    <string name="location_permission_denied">This sample requires location permission to enable the \'my location\' layer. Please try again and grant access to use the location.\nIf the permission has been permanently denied, it can be enabled from the System Settings &gt; Apps &gt; \'Google Maps API Demos\'.</string>
    <string name="permission_required_toast">Location permission is required for this demo.</string>
    <string name="permission_rationale_location">Access to the location service is required to demonstrate the \'my location\' feature, which shows your current location on the map.</string>

    <!-- Photo Auth Activity -->
    <string name="photo_auth_text">인증 사진 촬영하기</string>
    <string name="photo_auth_description_text">아래를 클릭해 인증 사진을 촬영하세요!</string>

    <!-- Challenge fragment -->
    <string name="challenge_off_progress_title">챌린지 진행 현황</string>
    <string name="challenge_off_progress_description">진행 중인 \'챌린지\'가 없어요!\n\'챌린지\' 시작하고\n추가 배지 받으세요:)</string>
    <string name="challenge_off_recommendation_title">난이도별 추천 챌린지</string>

    <string name="challenge_on_progress_title">챌린지 진행률</string>
    <string name="challenge_on_activity_of_today_title">오늘의 활동</string>

    <!-- Challenge Setting Activity -->
    <string name="challenge_setting_appbar_title">챌린지 설정하기</string>
    <string name="challenge_setting_spinner_hint_text">활동을 선택하세요.</string>

    <!-- Home Fragment -->
    <string name="home_my_activity_title">나의 활동</string>
    <string name="home_holding_badge_num_title">보유 배지 수</string>
    <string name="home_carbon_reduction_num_title">탄소 저감량</string>
    <string name="home_donation_badge_num_title">기부한 배지 수</string>
    <string name="home_my_seti_title">SETI 유형</string>
    <string name="home_ai_recommendation_activity_title">AI 추천 활동</string>
    <string name="home_donation_title">배지 기부하기</string>
    <string name="home_donation_input_hint">기부할 배지 개수를 입력</string>

    <string name="to_be_developed">개발 예정</string>
    <string name="coming_soon">Coming Soon</string>

    <string name="verified_history_toolbar_title">활동 인증 내역</string>
    <string name="challenge_history_toolbar_title">챌린지 내역</string>
    <string name="donation_history_toolbar_title">기부 내역</string>
    <string name="earned_badge_num_text">얻은 배지 수</string>
    <string name="swung_dash_text">~</string>
    <string name="challenge_success_failure">챌린지 성공 여부</string>
    <string name="challenge_additional_badge_num">추가 배지 수</string>


</resources>