<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/fragment_challenge_off_main_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FFFFFF"
        android:visibility="visible">

        <TextView
            android:id="@+id/fragment_challenge_off_progress_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/noto_sans_cjk_kr_bold"
            android:text="@string/challenge_off_progress_title"
            android:textColor="@android:color/black"
            android:textSize="22sp"
            android:includeFontPadding="false"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/fragment_challenge_off_progress_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_white_corner_radius_7dp"
            android:elevation="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/fragment_challenge_off_progress_text_view"
            tools:ignore="MissingConstraints">

            <ImageView
                android:id="@+id/fragment_challenge_off_otter_image_view"
                android:layout_width="145dp"
                android:layout_height="145dp"
                android:src="@drawable/otter_gloomy"
                android:scaleType="center" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:fontFamily="@font/notosansregular"
                android:text="@string/challenge_off_progress_description"
                android:textColor="@android:color/black"
                android:textSize="14sp"
                android:gravity="center"
                app:layout_constraintLeft_toRightOf="@id/fragment_challenge_off_otter_image_view"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                tools:ignore="MissingConstraints"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/fragment_challenge_off_recommendation_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="40dp"
            android:fontFamily="@font/noto_sans_cjk_kr_bold"
            android:text="@string/challenge_off_recommendation_title"
            android:textColor="@android:color/black"
            android:textSize="22sp"
            android:includeFontPadding="false"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/fragment_challenge_off_progress_layout"
            tools:ignore="MissingConstraints" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/fragment_challenge_off_recommendation_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="10dp"
            tools:ignore="MissingConstraints"
            android:overScrollMode="never"
            app:layout_constraintTop_toBottomOf="@id/fragment_challenge_off_recommendation_text_view"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/fragment_challenge_on_main_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="invisible">

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>